# textedit

./: PKGBUILD  README.md  com.github.vikdevelop.TextEdit.json  helloworld-.in  helloworld_.gresource.xml  main.py  meson.build  openproject.py  org.vik.dev.json  org.vikdev.myapp.json  org.vikdev.myapp.json~  textedit.desktop  textedit_1.0.4-1_x86-64.deb
DEBIAN/DEBIAN/: control
DEBIAN/usr/share/applications/: textedit.desktop
DEBIAN/usr/share/textedit/: README.md
DEBIAN/usr/share/textedit/src/: __init__.py  window.py  window.ui
arch/: PKGBUILD  textedit-1.0.4-1-any.pkg.tar.zst
build-aux/meson/: postinstall.py
data/: com.github.videvelop.TextEdit.desktop  com.github.vikdevelop.TextEdit.appdata.xml.in  com.github.vikdevelop.TextEdit.desktop.in  com.github.vikdevelop.TextEdit.gschema.xml  meson.build  org.vikdev.myapp.appdata.xml.in  org.vikdev.myapp.desktop.in  org.vikdev.myapp.gschema.xml
data/icons/: meson.build
po/: LINGUAS  POTFILES  meson.build
src/: main.py  meson.build  textedit.gresource.xml  textedit.in  textedit.py  window.py  window.ui
src/img/: foto
